# TestGLES2

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Renderer.cpp  Renderer.h  com_example_testgles2_GLUtils.h  data0.cpp  data1.cpp  data2.cpp  data3.cpp  data4.cpp  data5.cpp  native-lib.cpp
app/src/main/java/com/example/testgles2/: GLUtils.java  MainActivity.java
app/src/main/res/layout/: layout.xml
app/src/main/res/values/: strings.xml
